@@ -1,18 +1,0 @@
-package WIP.arcadeflex.libc;
-
-/**
- *
- * @author shadow
- */
-public class sizeof {
-
-    public static int sizeof(byte[] array) {
-        return array.length;
-    }
-    public static int sizeof(short[] array) {
-        return array.length;
-    }
-    public static int sizeof(int[] array) {
-        return array.length;
-    }
-}
