@@ -7,7 +7,7 @@ import static WIP.sound.sn76477H.*;
 import static old.sound.streams.*;
 import static old.mame.timer.*;
 import static old.mame.timerH.*;
-import static WIP.arcadeflex.libc.sizeof.*;
+import static common.libc.expressions.*;
 import static WIP.arcadeflex.libc.memset.*;
 import static common.libc.cstdio.*;
 import static WIP.mame.mame.Machine;
