@@ -6,6 +6,7 @@
 -Moved random generator to common/libc/stdlib
 -Moved sprintf to common/libc/stdio class
 -Moved BytePtr to common/ptr class
+-Added expressions (bool,not,sizeof ) to common/libc/expressions
 
 20/11/2018
 ==========
